[package]
name = "deepseek-api-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE-2.0.txt"
keywords = ["deepseek","deepseek-api","deepseek-api-client"]
description = "Unofficial api client for Deepseek"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
optional-default = "0.1.0"
reqwest =  { version = "0.12.5", features = ["json","stream","blocking"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"